@@ -15,6 +15,7 @@ Overview of changes in lightdm 1.1.0
     * Don't resize GTK greeter on each click
     * Start authentication when scrolling through GTK greeter entries
     * Link liblightdm-qt against QtGui
+    * Fix liblightdm-qt crashing when face images are installed
 
 Overview of changes in lightdm 1.0.0
 
